# update-netrc

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish-pypi-test.yaml  publish-pypi.yaml
src/update_netrc/: __init__.py  cli.py
tests/: .netrc  conftest.py
tests/functional/: test_cli.py
tests/profile_default/: history.sqlite
tests/unit/: test_update_netrc.py
